# ENUDET-sim

./: .gitignore  README.md  setup_enudet.sh  setup_solarsim.sh  setup_solarsim_ext.sh
G4SOLAr/: CMakeLists.txt  SLArUserPath.hh.in  SLArVersion.hh.in  rootlogon.C.in  rootrc.in  solar_sim.cc
G4SOLAr/assets/: test_protodune3_photonlib.json
G4SOLAr/assets/background/: cosmic_muon_spectrum.root  dune_cavern_n.txt  make_muon_hist.C
G4SOLAr/assets/geometry/: jcomposer.py  msolar_hd.json  msolar_standard_hall.json  msolar_tpc_hd.json  msolar_vault_hall.json  protodune_geometry.json  singlecube.json  singlecube_cryostat.json  singlecube_tpc.json  solar_fd_cryostat_cavern_gammas.json  solar_fd_cryostat_cavern_neutrons.json  solar_fd_tpc_vd.json  solar_fd_vd.json  solar_fd_vd_pds.json  surf_experimental_hall.json
G4SOLAr/assets/macros/: activity_config_test.json  all_walls_test_generator.json  cavernRock_config.json  cavernShotcrete_config.json  cavern_generator.mac  corsika_config.json  corsika_master.mac  cry_config.json  direction_test.json  externalflux_config_test.json  generator_test.json  genie_config.json  genie_master.mac  genie_selection_config.json  marley_config.json  marley_osci_config.json  neutrin_test.json  particleBomb_config.json  particleGun_config.json  radsrc_config.json  test_wall_gen.json  void_generator.mac
G4SOLAr/assets/marley_cfg/: B8_oscillogram.txt  B8_oscillogram_local.root  dump_th2_to_txt.C  edit_hist.C  nadir_pdf.root  surf_nadir_pdf.txt
G4SOLAr/assets/materials/: get_vuv_sipm_pde.cc  materials_db.json  vuv4-absolute-pde.txt
G4SOLAr/cmake/: G4CASCADE_CMakeLists.txt.in  G4CASCADE_setup.cmake  G4SOLArConfig.cmake.in  SOLAr-simConfig.cmake.in
G4SOLAr/include/: SLArAnalysisManager.hh  SLArAnalysisManagerMsgr.hh  SLArBaseGenerator.hh  SLArBoxSurfaceVertexGenerator.hh  SLArBulkVertexGenerator.hh  SLArCorsikaGeneratorAction.hh  SLArDecay0GeneratorAction.hh  SLArDetectorConstruction.hh  SLArDirectionGenerator.hh  SLArExternalGeneratorAction.hh  SLArFixedDirectionGenerator.hh  SLArGENIEGeneratorAction.hh  SLArGPSDirectionGenerator.hh  SLArGPSVertexGenerator.hh  SLArIsotropicDirectionGenerator.hh  SLArMarleyGeneratorAction.hh  SLArPBombGeneratorAction.hh  SLArPGunGeneratorAction.hh  SLArPhysicsList.hh  SLArPrimaryGeneratorAction.hh  SLArRandomExtra.hh  SLArRootUtilities.hh  SLArRunAction.hh  SLArSteppingAction.hh  SLArSunDirectionGenerator.hh  SLArVertextGenerator.hh  rootlogon.C.in
G4SOLAr/include/action/: SLArEventAction.hh  SLArRunAction.hh  SLArStackingAction.hh
G4SOLAr/include/analysis/: SLArAnalysisManager.hh  SLArAnalysisManagerMsgr.hh  SLArBacktracker.hh
G4SOLAr/include/config/: SLArCfgAssembly.hh  SLArCfgBaseModule.hh  SLArCfgBaseSystem.hh  SLArCfgSuperCell.hh
G4SOLAr/include/core/: SLArDebugConfig.hh  SLArDebugUtils.hh  SLArRootUtilities.hh
G4SOLAr/include/cry/: SLArCRYGeneratorAction.hh
G4SOLAr/include/detector/: SLArGeoUtils.hh
G4SOLAr/include/event/: SLArEventAnode.hh  SLArEventCRT.hh  SLArEventChargePixel.hh  SLArEventHitsCollection.hh  SLArEventMegatile.hh  SLArEventPhotonHit.hh  SLArEventReadoutLinkDef.h  SLArEventSuperCell.hh  SLArEventSuperCellArray.hh  SLArEventTrajectory.hh  SLArGenRecords.hh  SLArGenRecords.hpp  SLArGenRecordsLinkDef.h  SLArMCEvent.hh  SLArMCEventLinkDef.h  SLArMCPrimaryInfo.hh  SLArMCTruth.hh  SLArMCTruthLinkDef.h
G4SOLAr/include/geo/: SLArGeoUtils.hh  SLArUnit.hpp  VolumeStruct.hh
G4SOLAr/include/physics/: SLArElectronDrift.hh  SLArOpticalPhysics.hh  SLArPhysicsList.hh  SLArPhysicsListMessenger.hh  SLArScintillation.hh
G4SOLAr/src/: SLArAnalysisManager.cc  SLArAnalysisManagerMsgr.cc  SLArBaseGenerator.cc  SLArBoxSurfaceVertexGenerator.cc  SLArBulkVertexGenerator.cc  SLArCorsikaGeneratorAction.cc  SLArDecay0GeneratorAction.cc  SLArDetectorConstruction.cc  SLArEventAction.cc  SLArExternalGeneratorAction.cc  SLArGENIEGeneratorAction.cc  SLArGPSDirectionGenerator.cc  SLArGPSVertexGenerator.cc  SLArMarleyGeneratorAction.cc  SLArPBombGeneratorAction.cc  SLArPGunGeneratorAction.cc  SLArPhysicsList.cc  SLArPrimaryGeneratorAction.cc  SLArPrimaryGeneratorMessenger.cc  SLArRandomExtra.cc  SLArRunAction.cc  SLArStackingAction.cc
G4SOLAr/src/action/: CMakeLists.txt  SLArEventAction.cc  SLArRunAction.cc  SLArStackingAction.cc  SLArSteppingAction.cc  SLArSteppingVerbose.cc  SLArTrackingAction.cc
G4SOLAr/src/analysis/: CMakeLists.txt  SLArAnalysisManager.cc  SLArAnalysisManagerMsgr.cc  SLArBacktracker.cc  SLArBacktrackerManager.cc
G4SOLAr/src/config/: CMakeLists.txt  SLArCfgAnode.cc  SLArCfgAssembly.cc  SLArCfgBaseSystem.cc  SLArCfgSuperCell.cc
G4SOLAr/src/core/: CMakeLists.txt  SLArRootUtilities.cc
G4SOLAr/src/cry/: SLArCRYGeneratorAction.cc
G4SOLAr/src/detector/: SLArBaseDetModule.cc  SLArGeoInfo.cc  SLArGeoUtils.cc
G4SOLAr/src/event/: CMakeLists.txt  SLArEventAnode.cc  SLArEventCRT.cc  SLArEventChargePixel.cc  SLArEventMegatile.cc  SLArEventPhotonHit.cc  SLArEventSuperCell.cc  SLArEventSuperCellArray.cc  SLArGenRecords.cc  SLArMCEvent.cc  SLArMCPrimaryInfo.cc
G4SOLAr/src/geo/: CMakeLists.txt  SLArGeoInfo.cc  SLArGeoUtils.cc
G4SOLAr/src/physics/: CMakeLists.txt  SLArElectronDrift.cc  SLArPhysicsList.cc  SLArPhysicsListMessenger.cc  SLArScintillation.cc
G4SOLAr/src/radsrc/: SLArRadSrcGeneratorAction.cc
SOLArAnalysis/: CMakeLists.txt  check_neutron_final_state.C  hit_test_viewer.C  neutron_argon_check.cc  read_mc_truth.cc  refactor_externals_test.C  refactor_marley_test.C  refactor_test_display.C  refactor_test_photons.C  refactor_test_sc.C  solarfd_eve_pos.cc  strip_data.C  test_marley_oscillogram.C  test_photonbomb_backtracker.cc  valgrind_launch.sh
SOLArAnalysis/source/: SLArAnalysisLibSetup.hpp.in  rootlogon.C.in
SOLArAnalysis/source/include/: SLArAnalysisLibSetup.hpp  SLArLightPropagationModel.hh  SLArLightPropagationPars.hpp
SOLArAnalysis/source/script/: CMakeLists.txt  build_vmap.cc  larql_test.C  ngamma_cascade_test.C  test_larql.C  test_ql.cc  test_ql_vanilla.cc  test_time.C
SOLArAnalysis/source/src/: CMakeLists.txt  (+1 more)
SOLArUtils/source/: CMakeLists.txt
(+151 files in other folders)
